<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Video Medical Visit</string>
    <string name="welcome">Bentornato</string>
    <string name="login_account">Accedi al tuo account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="not_account">Non hai ancora un account?</string>
    <string name="signup">Iscriviti</string>
    <string name="signin">Accedi</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="phone_number">Cellulare</string>
    <string name="forgot_password1">Password dimenticata</string>
    <string name="continue_txt">Continua</string>
    <string name="new_password">Nuova password</string>
    <string name="re_enter_password">Reinserisci la nuova password</string>
    <string name="update_password">Aggiorna password</string>
    <string name="create_account">Crea Account</string>
    <string name="set_password">Imposta la nuova password per il tuo account in modo da poter effettuare il login e accedere a tutte le funzionalità.</string>
    <string name="four_digit">Inserisci il codice di 4 cifre che hai ricevuto via email.</string>
    <string name="email_verification">Inserisci il tuo indirizzo email per il processo di verifica, ti invieremo un codice di 4 cifre.</string>
    <string name="register">Registrati</string>
    <string name="create_your_new_account">Crea il tuo nuovo account</string>
    <string name="already_account">Hai già un account?</string>
    <string name="sign_up_our">Iscrivendoti accetterai i nostri</string>
    <string name="and">e la</string>
    <string name="terms_condition">Termini&amp;Condizioni</string>
    <string name="privacy_policy">Politica sulla Privacy</string>
    <string name="edit_profile">Modifica profilo</string>
    <string name="notification">Notifiche</string>
    <string name="language">Lingua</string>
    <string name="delete_account">Delete account</string>
    <string name="termsCondition">Termini e condizioni</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="Patient">Pazienti</string>
    <string name="Appointments">Appuntamenti</string>
    <string name="Income">Fatture</string>
    <string name="today_appointments">Appuntamenti Giornalieri</string>
    <string name="see_all">Visualizza tutti</string>
    <string name="profile">Profilo</string>
    <string name="accept">Accetta</string>
    <string name="declined">Declina</string>
    <string name="appointment_requests">Richieste di Appuntamenti</string>
    <string name="hi">Hi,</string>

</resources>