<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_31sdp"
    android:paddingTop="@dimen/_50sdp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:includeFontPadding="false"
        android:fontFamily="@font/pop_pins_semi_bold"
        android:textSize="@dimen/_30ssp"
        android:text="@string/welcome"/>
    <TextView
        android:includeFontPadding="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:fontFamily="@font/pop_pins_medium"
        android:textSize="@dimen/_14ssp"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/e_mail"
       android:layout_marginTop="@dimen/_10sdp"
       android:textColor="@color/black"
       android:fontFamily="@font/pop_pins_medium"
       android:textSize="@dimen/_14ssp"/>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="horizontal"
         android:background="@drawable/edit_bg">
         <ImageView
             android:layout_width="@dimen/_19sdp"
             android:layout_height="@dimen/_19sdp"
             android:contentDescription="@string/app_name"
             android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="10dp"
             android:src="@drawable/email"/>
         <EditText
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:padding="0dp"
             android:singleLine="true"
             android:hint="example@gmail.com"
             android:fontFamily="@font/pop_pins_regular"
             android:textSize="@dimen/_12ssp"
             android:layout_height="match_parent"/>
     </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/_14sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/pop_pins_medium"
        android:textSize="@dimen/_14ssp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/edit_bg">
        <ImageView
            android:id="@+id/lockIV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/lock"/>
        <EditText
            android:id="@+id/passED"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/lockIV"
            android:layout_toLeftOf="@id/showIV"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:inputType="textPassword"
            android:hint="*******"
            android:singleLine="true"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/showIV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/pass_visible"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/forgotTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/primary"
        android:fontFamily="@font/pop_pins_medium"
        android:textSize="@dimen/_12ssp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:layout_height="48dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_bold"
            android:textSize="@dimen/_12ssp"
            android:text="@string/signin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_account"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_13ssp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/primary"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/pop_pins_bold"
            android:textSize="@dimen/_16ssp"
            />
    </LinearLayout>

</LinearLayout>