<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@color/primary"
    android:scrollbarStyle="insideInset"
    android:scrollIndicators="right"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:paddingHorizontal="@dimen/_31sdp"
        android:paddingTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:fontFamily="@font/pop_pins_semi_bold"
            android:textSize="@dimen/_30ssp"
            android:text="@string/register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/create_your_new_account"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg">
            <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/user"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:hint="abc"
                android:singleLine="true"
                android:fontFamily="@font/pop_pins_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg">
            <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/user"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:hint="abc"
                android:singleLine="true"
                android:fontFamily="@font/pop_pins_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg">
            <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/email"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:hint="example@gmail.com"
                android:singleLine="true"
                android:fontFamily="@font/pop_pins_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg">
            <ImageView
                android:id="@+id/lockIV"
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/lock"/>
            <EditText
                android:id="@+id/passED"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/lockIV"
                android:layout_toLeftOf="@id/showIV"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:inputType="textPassword"
                android:hint="*******"
                android:singleLine="true"
                android:fontFamily="@font/pop_pins_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/showIV"
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/pass_visible"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/pop_pins_medium"
            android:textSize="@dimen/_14ssp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg">
            <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/call"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:hint="123456789"
                android:singleLine="true"
                android:fontFamily="@font/pop_pins_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
           android:padding="6dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/pop_pins_regular"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/sign_up_our"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="2dp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/pop_pins_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/terms_condition"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_marginHorizontal="5dp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/pop_pins_regular"
                    android:textSize="@dimen/_11ssp"
                    android:text="@string/and"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:fontFamily="@font/pop_pins_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/privacy_policy"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            android:layout_gravity="center"
            android:layout_height="48dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/pop_pins_bold"
                android:textSize="@dimen/_12ssp"
                android:text="@string/signup"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pop_pins_regular"
                android:text="@string/already_account"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:fontFamily="@font/pop_pins_bold"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/primary"/>
        </LinearLayout>

    </LinearLayout>



</ScrollView>