<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_31sdp"
    android:background="@drawable/bottom_sheet_bg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password1"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/pop_pins_bold"
        android:textSize="@dimen/_20sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pop_pins_regular"
        android:textSize="@dimen/_12ssp"
        android:includeFontPadding="false"
        android:text="@string/set_password"
        android:textColor="@color/otp_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:background="@drawable/edit_bg">
        <ImageView
            android:id="@+id/lockIV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/lock"/>
        <EditText
            android:id="@+id/passED"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/lockIV"
            android:layout_toLeftOf="@id/showIV"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:singleLine="true"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/showIV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/pass_visible"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:background="@drawable/edit_bg">
        <ImageView
            android:id="@+id/lock1IV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/lock"/>
        <EditText
            android:id="@+id/conPassED"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/lock1IV"
            android:layout_toLeftOf="@id/show1IV"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:inputType="textPassword"
            android:hint="@string/re_enter_password"
            android:singleLine="true"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/show1IV"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/pass_visible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_width="match_parent"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:layout_height="48dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_bold"
            android:textSize="@dimen/_12ssp"
            android:text="@string/update_password"/>
    </LinearLayout>

</LinearLayout>