<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg"
    android:paddingHorizontal="@dimen/_31sdp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password1"
        android:textColor="@color/black"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/pop_pins_bold"
        android:textSize="@dimen/_20sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:fontFamily="@font/pop_pins_regular"
        android:textSize="@dimen/_12ssp"
        android:text="@string/email_verification"
        android:textColor="@color/otp_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal"
        android:background="@drawable/edit_bg">
        <ImageView
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/email"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"

            android:hint="example@gmail.com"
            android:singleLine="true"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emailConti"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:layout_height="48dp">
        <ProgressBar
            android:id="@+id/PB"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/TV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_bold"
            android:textSize="@dimen/_12ssp"
            android:text="@string/continue_txt"/>
    </RelativeLayout>


</LinearLayout>