<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg"
    android:paddingHorizontal="@dimen/_31sdp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password1"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/pop_pins_bold"
        android:textSize="@dimen/_20sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pop_pins_regular"
        android:textSize="@dimen/_12ssp"
        android:text="@string/four_digit"
        android:textColor="@color/otp_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ED1"
            android:layout_width="45dp"
            android:padding="0dp"
            android:hint="0"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_bg"
            android:singleLine="true"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/ED2"
            android:layout_width="45dp"
            android:padding="0dp"
            android:hint="0"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_bg"
            android:singleLine="true"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/ED3"
            android:layout_width="45dp"
            android:padding="0dp"
            android:hint="0"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_bg"
            android:singleLine="true"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/ED4"
            android:layout_width="45dp"
            android:padding="0dp"
            android:hint="0"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/edit_bg"
            android:singleLine="true"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/continueBTN"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:layout_height="48dp">
        <ProgressBar
            android:id="@+id/PB"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/TV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/pop_pins_bold"
            android:textSize="@dimen/_12ssp"
            android:text="@string/continue_txt"/>
    </RelativeLayout>

</LinearLayout>